kinda broken navbar

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,20 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joel's Webpage</title>
-    <link rel="icon" href="/static/img/combo.png" type="image/icon type">
-    <meta name="description" content="website for Joel Coulon">
+    <link rel="icon" href="/static/img/logo.png" type="image/icon type">
+    <meta name="description" content="Website for Joel Coulon">
     <meta name="keywords" content="Joel, Coulon, Joel Coulon, Mole1424, Programming, University of Warwick">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/navbar.css">
 </head>
 
 <body>
-    <h1>Joel's Webpage</h1>
-    <p>Hi! My name is Joel. I am currently studying Computer Science at the University of Warwick</p>
-    <p>Will make this look pretty soon(tm)</p>
-    <p>For the time being:</p>
-    <ul>
-        <li><a href="https://github.com/Mole1424">Github</a></li>
-        <li><a href="https://joshheng.co.uk/blog/streaming-wasd-2023">WASD</a> I did a thing for charity! (credit to
-            Josh for the blog post)</li>
-    </ul>
+    {% include 'navbar.html' %}
+</body>
 
 </html>
