--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -18,16 +18,9 @@
     border-radius: 10%;
 }
 
-.navlinks {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
 .navlinksleft,
 .navlinksright {
+    height: 100%;
     list-style: none;
     display: flex;
 }
@@ -40,17 +33,27 @@
 .navlinksright {
     margin-left: auto;
     justify-content: flex-end;
+    flex: 0 0 auto;
 }
 
 .navlink {
-    padding: 10%;
-    padding-right: 20%;
+    padding: 0;
+    margin: 0 10%;
+    flex: 0 0 auto;
 }
 
 .navlink a {
     display: flex;
     align-items: center;
+    justify-content: center;
     text-decoration: none;
-    font-size: large;
-    color: #333;
+    font-size: 3vh;
+    color: white;
+    height: 100%;
+}
+
+.navsvg {
+    height: 6vh;
+    width: 6vh;
+    object-fit: contain;
 }
