--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
     <a href="/" class="logo"><img src="../static/img/logo.png" alt="logo"></a>
     <ul class="navlinksleft">
         <li class="navlink"><a href="/aboutme">About Me</a></li>
-        <li class="navlink"><a href="/projects">Projects</a></li>
+        {# <li class="navlink"><a href="/projects">Projects</a></li> #}
     </ul>
     <ul class="navlinksright">
         <li class="navlink">
