--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
     <a href="/" class="logo"><img src="../static/img/logo.png" alt="logo"></a>
     <ul class="navlinksleft">
-        <li class="navlink"><a href="/aboutme">About Me</a></li>
-        {# <li class="navlink"><a href="/projects">Projects</a></li> #}
+        <li class="navlink"><a href="https://joelcoulon.com/aboutme">About Me</a></li>
+        <li class="navlink"><a href="https://joelcoulon.com/projects">Projects</a></li>
     </ul>
     <ul class="navlinksright">
         <li class="navlink">
