--- a/static/css/aboutme.css
+++ b/static/css/aboutme.css
@@ -41,6 +41,17 @@
     color: var(--text);
     font-size: 5vh;
     width: 80%;
+    max-height: 100%;
+    padding-top: 2%;
+}
+
+.aboutmelink {
+    color: var(--text);
+    text-decoration: underline;
+}
+
+.aboutmelink:hover {
+    color: var(--accent);
 }
 
 @media screen and (max-width: 500px) {
