--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,9 +1,14 @@
 .navbar {
+    position: fixed;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 8vh;
+    margin-bottom: 8vh;
     background-color: var(--background2);
+    z-index: 100;
+    top: 0;
 }
 
 .logo {
@@ -16,6 +21,11 @@
     width: 100%;
     object-fit: contain;
     border-radius: 10%;
+    transition: all 0.2s ease-in-out;
+}
+
+.logo img:hover {
+    transform: scale(1.1);
 }
 
 .navlinksleft,
@@ -44,7 +54,7 @@
 }
 
 #lastnavlink {
-    margin-right: 20%;
+    margin-right: 1.25vw;
 }
 
 .navlink a {
@@ -61,22 +71,6 @@
 
 .navlink a:hover {
     color: var(--accent);
-}
-
-.navlink>a::after {
-    position: absolute;
-    bottom: 15%;
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    background: var(--accent);
-    transition: width 0.3s;
-}
-
-.navlink>a:hover::after {
-    width: 100%;
-    transition: width 0.3s;
 }
 
 .navsvg {
@@ -110,6 +104,6 @@
     }
 
     .logo {
-        margin-top: 2%;
+        display: none;
     }
 }
