--- a/static/css/projectpage.css
+++ b/static/css/projectpage.css
@@ -5,7 +5,7 @@
 
 .imgtitle {
     width: 100%;
-    height: 30vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
 }
 
 .imgtitle img {
-    height: 100%;
+    height: 30vh;
     width: auto;
     border-radius: 10px;
 }
@@ -58,8 +58,23 @@
         padding-top: 10vh;
     }
 
-    .imgtitle h1 {
+    .imgtitle {
+        flex-direction: column;
+    }
+
+    .imgtitle img {
+        height: 20vh;
+    }
+
+    .description {
+        width: 90vw;
+        padding-top: 2vh;
+        padding-left: none;
+    }
+
+    .description h1 {
         margin-top: 0;
         font-size: 5vh;
+        width: 90vh;
     }
 }
