--- a/templates/projectpage.html
+++ b/templates/projectpage.html
@@ -9,7 +9,7 @@
         <img src="{{ project.image }}" alt="{{ project.title }}">
         <div class="description">
             <h1>{{ project.title }}</h1>
-            <p">{{ project.description }}</p>
+            <p>{{ project.description }}</p>
         </div>
     </div>
     <div class="fullblog">
