--- a/static/css/projectpage.css
+++ b/static/css/projectpage.css
@@ -32,7 +32,12 @@
 }
 
 .fullblog a {
-    color: var(--accent)
+    color: var(--accent);
+    text-decoration: none;
+}
+
+.fullblog a:hover {
+    text-decoration: underline;
 }
 
 .fullblog img {
@@ -75,6 +80,6 @@
     .description h1 {
         margin-top: 0;
         font-size: 5vh;
-        width: 90vh;
+        width: 90vw;
     }
 }
