--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,5 +1,6 @@
 .projects {
     width: 90vw;
+    min-height: 92vh;
     margin: auto;
     padding-top: 4vh;
 }
@@ -48,6 +49,10 @@
     left: 2%;
 }
 
+.projectdescription {
+    width: 95%;
+}
+
 .noitem {
     display: flex;
     justify-content: center;
@@ -83,11 +88,13 @@
 @media screen and (max-width: 566px) {
     .projects {
         width: 100vw;
+        min-height: 92vh;
+        margin: 0 auto;
         display: flex;
         overflow: auto;
         scroll-snap-type: x mandatory;
         scroll-padding: 0 2%;
-        padding-top: 10vh;
+        padding: 0;
     }
 
     .project {
