--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,10 +3,10 @@
     <a href="/projects/{{project.id}}" class="project">
         <div class="imgtitle">
             <div class="backgroundcontainer">
-                <img class="background" src="{{ project.image }}" alt="{{ project.title }}">
+                <img class="background" src="{{ project.image }}" alt="{{ project.title }} background">
             </div>
             <div class="foregroundcontainer">
-                <img class="foreground" src="{{ project.image }}" alt="{{ project.title }}">
+                <img class="foreground" src="{{ project.image }}" alt="{{ project.title }} foreground">
             </div>
             <div class="overlay">
                 <h1>{{ project.title }}</h1>
