--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -101,6 +101,7 @@
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         justify-items: center;
         align-items: stretch;
+        margin-bottom: 2vh;
     }
 
     .project {
