--- a/templates/noproject.html
+++ b/templates/noproject.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} Project not found {% endblock %}
-
+{% block description %} Project not found {% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/static/css/noproject.css">
 {% endblock %}
