--- a/templates/projectspage.html
+++ b/templates/projectspage.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %} Joel's Projects {% endblock %}
-
+{% block description %} Joel's projects {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/projects.css"> {% endblock %}
+<link rel="stylesheet" href="../static/css/projects.css">
+<meta property="og:image" content="https://joelcoulon.co.uk/static/images/logo.png">
+<meta property="og:url" content="https://joelcoulon.com/projects">
+{% endblock %}
 
 {% block content %}
 {% with projects=projects%}
