--- a/templates/aboutmepage.html
+++ b/templates/aboutmepage.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %} About Joel {% endblock %}
-
+{% block description %} About Joel Coulon {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/aboutme.css"> {% endblock %}
+<link rel="stylesheet" href="../static/css/aboutme.css">
+<meta property="og:image" content="https://joelcoulon.co.uk/static/images/logo.png">
+<meta property="og:url" content="https://joelcoulon.com/aboutme">
+{% endblock %}
 
 {% block content %}
 {% with homepage=homepage %}
