--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <meta property="og:title" content="{{self.title()}}">
     <link rel="icon" href="/static/img/logo.png" type="image/icon type">
-    <meta name="description" content="Website for Joel Coulon">
-    <meta name="keywords" content="Joel, Coulon, Joel Coulon, Mole1424, Programming, University of Warwick">
+    <meta name="keywords" content="Joel, Coulon, Joel Coulon, Programming, University of Warwick">
+    <meta name="description" content="{% block description %}{% endblock%}">
+    <meta property="og:description" content="{{self.description()}}">
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/navbar.css">
     {% block head %}{% endblock %}
+    <meta property="og:type" content="{{ 'article' if 'projects' in request.url else 'website' }}" />
+    <meta property="og:locale" content="en_GB">
 </head>
 
 <body>
