--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% block title %} Joel Coulon {% endblock %}
+{% block description %} Website for Joel Coulon {% endblock %}
 {% block head %}
 <link rel="stylesheet" href="../static/css/aboutme.css">
 <link rel="stylesheet" href="../static/css/projects.css">
+<meta property="og:image" content="https://joelcoulon.co.uk/static/images/logo.png">
+<meta property="og:url" content="https://joelcoulon.com/">
 {% endblock %}
 {% block content %}
 {% with homepage=homepage %}
