--- a/static/css/projectpage.css
+++ b/static/css/projectpage.css
@@ -1,5 +1,5 @@
 .projectarticle {
-    max-width: 80vw;
+    width: 50vw;
     margin: auto;
 }
 
@@ -24,12 +24,17 @@
     flex-direction: column;
     padding-left: 3vw;
     width: 50%;
+    text-align: justify;
 }
 
 .description h1 {
     font-size: 8vh;
     margin-bottom: 2vh;
     margin-top: 1vh;
+}
+
+.fullblog p {
+    text-align: justify;
 }
 
 .fullblog a {
@@ -63,6 +68,7 @@
 @media screen and (max-width: 500px) {
     .projectarticle {
         padding-top: 10vh;
+        width: 80vw;
     }
 
     .imgtitle {
@@ -72,6 +78,7 @@
     .imgtitle img {
         max-height: 20vh;
         max-width: 100%;
+        margin: auto;
     }
 
     .description {
