--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -23,8 +23,7 @@
 .backgroundcontainer {
     overflow: hidden;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    aspect-ratio: 1/1;
     border-radius: 10px;
 }
 
@@ -53,7 +52,6 @@
 .foreground {
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain;
     border-radius: 10px;
 }
 
@@ -126,7 +124,6 @@
     }
 
     .project {
-        height: 50vh;
         width: 90vw;
         flex-shrink: 0;
         scroll-snap-align: start;
