--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,3 +14,12 @@ body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+a {
+    text-decoration: none;
+    color: var(--accent);
+}
+
+a:hover {
+    text-decoration: underline;
+}
