--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,7 +1,11 @@
 .projects {
     width: 90vw;
     margin: auto;
-    padding-top: 4vh;
+}
+
+.projectsintro h2 {
+    font-size: 8vh;
+    margin: 0;
 }
 
 .project {
@@ -96,7 +100,7 @@
 }
 
 @media screen and (min-width: 567px) {
-    .projects {
+    .projectcards {
         display: grid;
         gap: 1vw;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -120,6 +124,16 @@
         width: 100vw;
         min-height: 92vh;
         margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .projectsintro {
+        margin-left: 7.5vw;
+    }
+
+    .projectcards {
         display: flex;
         overflow: auto;
         scroll-snap-type: x mandatory;
