--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,22 +1,34 @@
 <div class="projects">
-    {% for project in projects %}
-    <a href="/projects/{{project.id}}" class="project">
-        <div class="imgtitle">
-            <div class="backgroundcontainer">
-                <img class="background" src="{{ project.image }}" alt="{{ project.title }} background">
-            </div>
-            <div class="foregroundcontainer">
-                <img class="foreground" src="{{ project.image }}" alt="{{ project.title }} foreground">
-            </div>
-            <div class="overlay">
-                <h1>{{ project.title }}</h1>
-            </div>
-        </div>
-        <p class="projectdescription">{{ project.description }}</p>
-    </a>
-    {% else %}
-    <div class="noitem">
-        <p class="noproject">No projects found, please check back soon™</p>
+    <div class="projectsintro">
+        <h2>Projects</h2>
+        <p class="projectsdescription">
+            Here are some of the projects I've worked on. Click on a project to learn more about it.
+        </p>
+        <p>
+            A list of smaller projects I have worked on but I don't think require a full blog post can be found <a
+                href="/projects/smallprojects">here</a>
+        </p>
     </div>
-    {% endfor %}
+    <div class="projectcards">
+        {% for project in projects %}
+        <a href="/projects/{{project.id}}" class="project">
+            <div class="imgtitle">
+                <div class="backgroundcontainer">
+                    <img class="background" src="{{ project.image }}" alt="{{ project.title }} background">
+                </div>
+                <div class="foregroundcontainer">
+                    <img class="foreground" src="{{ project.image }}" alt="{{ project.title }} foreground">
+                </div>
+                <div class="overlay">
+                    <h1>{{ project.title }}</h1>
+                </div>
+            </div>
+            <p class="projectdescription">{{ project.description }}</p>
+        </a>
+        {% else %}
+        <div class="noitem">
+            <p class="noproject">No projects found, please check back soon™</p>
+        </div>
+        {% endfor %}
+    </div>
 </div>
