updates to small projects

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,8 +5,8 @@
             Here are some of the projects I've worked on. Click on a project to learn more about it.
         </p>
         <p>
-            A list of smaller projects I have worked on but I don't think require a full blog post can be found <a
-                href="/projects/smallprojects">here</a>
+            I also have a list of <a href="/projects/smallprojects">smaller projects</a> which I think are cool
+            but aren't big enough to have their own full blog.
         </p>
     </div>
     <div class="projectcards">
