--- a/templates/smallprojects.html
+++ b/templates/smallprojects.html
@@ -20,7 +20,7 @@
         </li>
         {% else %}
         <li>
-            <p>No small projects yet :(</p>
+            <p>No small projects yet :(, please check back soon™</p>
         </li>
         {% endfor %}
     </ul>
