--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -122,7 +122,7 @@
 @media screen and (max-width: 566px) {
     .projects {
         width: 100vw;
-        min-height: 92vh;
+        height: 92vh;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -142,6 +142,7 @@
     }
 
     .project {
+        height: 100%;
         width: 80vw;
         flex-shrink: 0;
         scroll-snap-align: center;
