updated main image to be png

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% block head %}
 <link rel="stylesheet" href="../static/css/aboutme.css">
 <link rel="stylesheet" href="../static/css/projects.css">
-<meta property="og:image" content="https://joelcoulon.co.uk/static/images/logo.png">
+<meta property="og:image" content="https://joelcoulon.com/static/images/logo.png">
 <meta property="og:url" content="https://joelcoulon.com/">
 {% endblock %}
 {% block content %}
