--- a/templates/aboutmepage.html
+++ b/templates/aboutmepage.html
@@ -3,8 +3,8 @@
 {% block title %} About Joel {% endblock %}
 {% block description %} About Joel Coulon {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/aboutme.css">
-<meta property="og:image" content="https://joelcoulon.co.uk/static/images/logo.png">
+<link rel="stylesheet" href="/static/css/aboutme.css">
+<meta property="og:image" content="{{config['UPLOAD_FOLDER']}}logo.png">
 <meta property="og:url" content="https://joelcoulon.com/aboutme">
 {% endblock %}
 
