--- a/templates/projects.html
+++ b/templates/projects.html
@@ -14,10 +14,14 @@
         <a href="/projects/{{project.id}}" class="project">
             <div class="imgtitle">
                 <div class="backgroundcontainer">
-                    <img class="background" src="{{ project.image }}" alt="{{ project.title }} background">
+                    <img class="background"
+                        src="{{config['UPLOAD_FOLDER'] if not project.image.startswith('https://')}}{{ project.image }}"
+                        alt="{{ project.title }} background">
                 </div>
                 <div class="foregroundcontainer">
-                    <img class="foreground" src="{{ project.image }}" alt="{{ project.title }} foreground">
+                    <img class="foreground"
+                        src="{{config['UPLOAD_FOLDER'] if not project.image.startswith('https://')}}{{ project.image }}"
+                        alt="{{ project.title }} foreground">
                 </div>
                 <div class="overlay">
                     <h1>{{ project.title }}</h1>
