--- a/templates/projectspage.html
+++ b/templates/projectspage.html
@@ -3,8 +3,8 @@
 {% block title %} Joel's Projects {% endblock %}
 {% block description %} Joel's projects {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/projects.css">
-<meta property="og:image" content="https://joelcoulon.co.uk/static/images/logo.png">
+<link rel="stylesheet" href="/static/css/projects.css">
+<meta property="og:image" content="{{config['UPLOAD_FOLDER']}}logo.png">
 <meta property="og:url" content="https://joelcoulon.com/projects">
 {% endblock %}
 
