--- a/templates/smallprojects.html
+++ b/templates/smallprojects.html
@@ -2,7 +2,7 @@
 {% block title %} Small Projects {% endblock %}
 {% block description %} A list of small projects that don't have their own blog {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/smallprojects.css">
+<link rel="stylesheet" href="/static/css/smallprojects.css">
 <meta property="og:url" content="https://joelcoulon.com/projects/smallprojects">
 {% endblock %}
 {% block content %}
