--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <meta property="og:title" content="{{self.title()}}">
-    <link rel="icon" href="/static/img/logo.png" type="image/icon type">
+    <link rel="icon" href="{{config['UPLOAD_FOLDER']}}logo.png" type="image/icon type">
     <meta name="keywords" content="Joel, Coulon, Joel Coulon, Programming, University of Warwick">
     <meta name="description" content="{% block description %}{% endblock%}">
     <meta property="og:description" content="{{self.description()}}">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/navbar.css">
     {% block head %}{% endblock %}
     <meta property="og:type" content="{{ 'article' if 'projects' in request.url else 'website' }}" />
     <meta property="og:locale" content="en_GB">
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar">
-        <a href="/" class="logo"><img src="../static/img/logo.png" alt="logo"></a>
+        <a href="/" class="logo"><img src="{{config['UPLOAD_FOLDER']}}logo.png" alt="logo"></a>
         <ul class="navlinksleft">
             <li class="navlink"><a href="/aboutme">About Me</a></li>
             <li class="navlink"><a href="/projects">Projects</a></li>
