--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,9 @@
 {% block title %} Joel Coulon {% endblock %}
 {% block description %} Website for Joel Coulon {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/aboutme.css">
-<link rel="stylesheet" href="../static/css/projects.css">
-<meta property="og:image" content="https://joelcoulon.com/static/images/logo.png">
+<link rel="stylesheet" href="/static/css/aboutme.css">
+<link rel="stylesheet" href="/static/css/projects.css">
+<meta property="og:image" content="{{config['UPLOAD_FOLDER']}}/logo.png">
 <meta property="og:url" content="https://joelcoulon.com/">
 {% endblock %}
 {% block content %}
