--- a/templates/projectpage.html
+++ b/templates/projectpage.html
@@ -2,15 +2,16 @@
 {% block title %} {{ project.title }} {% endblock %}
 {% block description %} {{ project.description }} {% endblock %}
 {% block head %}
-<link rel="stylesheet" href="../static/css/projectpage.css">
+<link rel="stylesheet" href="/static/css/projectpage.css">
 <meta property="og:image"
-    content="{{'https://joelcoulon.com' if not project.image.startswith('https://')}}{{ project.image }}">
+    content="{{config['UPLOAD_FOLDER'] if not project.image.startswith('https://')}}{{ project.image }}">
 <meta property="og:url" content="https://joelcoulon.com/projects/{{ project.id }}">
 {% endblock %}
 {% block content %}
 <article class="projectarticle">
     <div class="imgtitle">
-        <img src="{{ project.image }}" alt="{{ project.title }}">
+        <img src="{{config['UPLOAD_FOLDER'] if not project.image.startswith('https://')}}{{ project.image }}"
+            alt="{{ project.title }}">
         <div class="description">
             <h1>{{ project.title }}</h1>
             <p>{{ project.description }}</p>
