--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -20,15 +20,10 @@
     </div>
     {% if homepage %}
     <div class="downarrowcontainer">
-        <svg class="downarrow" xlmns="http://www.w3.org/2000/svg" viewbox="0 0 512 512">
-            <g>
-                <path d="M256,0C114.618,0,0,114.618,0,256s114.618,256,256,256s256-114.618,256-256S397.382,0,256,0z M256,469.333
-            c-117.818,0-213.333-95.515-213.333-213.333S138.182,42.667,256,42.667S469.333,138.182,469.333,256S373.818,469.333,256,469.333
-            z" />
-                <path d="M347.582,198.248L256,289.83l-91.582-91.582c-8.331-8.331-21.839-8.331-30.17,0c-8.331,8.331-8.331,21.839,0,30.17
-            l106.667,106.667c8.331,8.331,21.839,8.331,30.17,0l106.667-106.667c8.331-8.331,8.331-21.839,0-30.17
-            C369.42,189.917,355.913,189.917,347.582,198.248z" />
-            </g>
+        <svg class="downarrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+            <path
+                d="M128,20A108,108,0,1,0,236,128,108.12,108.12,0,0,0,128,20Zm0,192a84,84,0,1,1,84-84A84.09,84.09,0,0,1,128,212Zm48.49-108.49a12,12,0,0,1,0,17l-40,40a12,12,0,0,1-17,0l-40-40a12,12,0,0,1,17-17L128,135l31.51-31.52A12,12,0,0,1,176.49,103.51Z">
+            </path>
         </svg>
     </div>
     {% endif %}
