--- a/static/css/dog.css
+++ b/static/css/dog.css
@@ -10,15 +10,11 @@
 .dogpic {
     border-radius: 10px;
     place-self: center;
-    max-height: 100%;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
     overflow: hidden;
     animation: dogpicfade 0.5s ease-out backwards;
-}
-
-.dogpiclarge {
-    grid-row: span 2 / auto;
-    grid-column: span 2 / auto;
 }
 
 @keyframes dogpicfade {
@@ -31,4 +27,9 @@
         opacity: 1;
         transform: scale(1);
     }
+}
+
+.dogpiclarge {
+    grid-row: span 2 / auto;
+    grid-column: span 2 / auto;
 }
